# ChangeLog for app-emulation/virt-manager
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emulation/virt-manager/ChangeLog,v 1.86 2013/06/28 21:01:09 ago Exp $

  28 Jun 2013; Agostino Sarubbo <ago@gentoo.org> virt-manager-0.9.5.ebuild:
  Stable for amd64, wrt bug #475052

  28 Jun 2013; Doug Goldstein <cardoe@gentoo.org> virt-manager-0.10.0.ebuild:
  VNC and SPICE aren't optional and are always imported so we can't make them
  optional.

  25 Jun 2013; Doug Goldstein <cardoe@gentoo.org> virt-manager-0.10.0.ebuild,
  virt-manager-9999.ebuild:
  The way this package installs we won't be able to support multiple Python
  versions so switch to python-single-r1. Additionally the scripts are installed
  outside of where python_fix_shebang normally runs so we must explicitly fix it
  up.

  25 Jun 2013; Doug Goldstein <cardoe@gentoo.org> virt-manager-0.10.0.ebuild,
  virt-manager-9999.ebuild:
  Glade shouldn't be required.

  25 Jun 2013; Doug Goldstein <cardoe@gentoo.org> virt-manager-0.10.0.ebuild,
  virt-manager-9999.ebuild:
  Handful of eclass usage fixes. Nothing like getting our GNOME/gconf/gsettings
  bits to play nice with our new Python eclass bits.

*virt-manager-9999 (24 Jun 2013)
*virt-manager-0.10.0 (24 Jun 2013)

  24 Jun 2013; Doug Goldstein <cardoe@gentoo.org> +virt-manager-0.10.0.ebuild,
  +virt-manager-9999.ebuild:
  Version bump. Significant reimplementation in this version that merges
  virtinst and switches to GTK+3 interfaces.

  11 Jun 2013; Doug Goldstein <cardoe@gentoo.org> -virt-manager-9999.ebuild:
  The code base has almost completely started over and the build system is
  entirely new. master is changing pretty rapidly and a live ebuild just won't
  work at this time. bug #472394

  24 May 2013; Patrick Lauer <patrick@gentoo.org> virt-manager-9999.ebuild:
  Removing unneeded/unsatisfiable virtinst dependency
