@@ -1,29 +1,25 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
 DIST virt-manager-0.10.0.tar.gz 2548256 SHA256 59bd8f316917228885261a1ecbeb9aadbb0b0e02cdf5fc974c78113c5814346d SHA512 13eaed3645ccee79da6a972e02bb182b5bd24981ff55b6322b8aaf2689fab520f22f1e729bb5f5287d66526252a31a531c6595ee27489a52fb4829ae18cf8204 WHIRLPOOL e3e34506171217c63e5e5337157f75006554afb156a430f2ee7f11e354d0c490adc371174b342efb4cc90ab0686d2c74f42b4d52c55c0a9221868670980fdbb3
 DIST virt-manager-0.9.4.tar.gz 1709809 SHA256 dc8c553beeb15bb30cd5517b2105bcc47cf482b03523e522733c52b0e5df0fc0 SHA512 f70f4c4f0d5b282d8126e495a2da8bcb6afe0bcbbae493d4abb46c3a1802f5ce36f477125421cb577ab2f64bae522db4d7c03558fa7997d74f5060b29b98c53a WHIRLPOOL 00a213515f23858278f47069102cf82eb053255b81a9e128fd666dbb17f6d9e7ce2365b4370fa3b733406c07599fe5c0dfa076a6555c48dd62d1178b679acedb
 DIST virt-manager-0.9.5.tar.gz 1773882 SHA256 5d2afb282fb8c4401f9e203dcb41a62746b9a909258d440d508219bc1a33803d SHA512 a1ecf6fe9f3ddacfe43006cfc388d9324c457be91767792119d8a112b190739e3274dfeb7cffd28534b86a33f86079c569d8337eeddaa9d60ed69f82d8a4627f WHIRLPOOL d15728e55c0a3e361b42b6e615bed50b8870c436a12ae0ececcd80d47d0482ea01c33f5497672e050aa6465f9b031948bf92925710c4340837d789d4634506c8
-EBUILD virt-manager-0.10.0.ebuild 1946 SHA256 1d5bbec521da880b53e5fbfff127abf15e96e3e1ad18c53b4bf52dc9f4a21171 SHA512 24d4b026eaed690815579b30753450521da2f554c6c90de4d253797de266f8ad2d86edd2ccfacb16f12c85cc4f43cc01a54d0c7857c3125e19211aa8cd9e0391 WHIRLPOOL 712492d08b8ba3d06258317a6ca4bd893278d281b3b7bc0ca5cab41ae9e1e6c4ca8e9fc6a066e44b5420e78d12d290e236bb1eba22341d8366a09daf6c03cf9d
+EBUILD virt-manager-0.10.0.ebuild 2110 SHA256 344fe5cdc6721457a0ff8cb67f4a3a42b428afdfa98e58c007749fb4526d2dde SHA512 d09764d00a319b3fc7bbbf841316c4928d4e538ed1d545f5589a1ac1b3f0d51356c42920372042090e45aa5445515d8786631019d0e1fc4624bd26bbb5d1652c WHIRLPOOL 31b3aae82c52ecc738e627f54c370ea1aa1c72b5e02b6276dfb81903da2749998dbd80ea419da21909c15dc90b2973716910731d77069e89394683fda558726e
 EBUILD virt-manager-0.9.4.ebuild 2654 SHA256 a19993fd911cf50a1a1ce83059c5edb40cab6a10750a9aa5f783abf3a1a89f8e SHA512 0e2cf711efd585b0cc3f3c5ecc0f60d4caa9d4e580ac33c711875aabb8788ede098ca5a649b3b139f6896459d54711d49b354a319b275d5c85ab2e97730183f3 WHIRLPOOL 82c9c1c4bc8709a6033ef0062e5357207dc9376a78eaecf7549ddd22df47525e602ef0a37279d90d65c6437ae0495b754deb190d1d87db6c4e3aff497f4b2eb4
 EBUILD virt-manager-0.9.5.ebuild 2652 SHA256 87d427378485dcfd65789e32a2b0afd0438c54e774e302e8383a54286a789810 SHA512 b4ac95f3dbbeca31ef6e4c308ef89590e07e8598c27ce7ca01b1de1d24d6c13225aee4503f6024fe731fe47d262aeaeab483b52c69f6dff43f567c9c4d2fe05f WHIRLPOOL 2ee4bbf965263df27c7a691bf3af9db850e80a52e188b3057639d9e7c3ad7234dfe126fcd972d5590c7e5be43ebcf7342b9c234fa421374e7f033a056b259388
 EBUILD virt-manager-9999.ebuild 2051 SHA256 97294c609d54881cd0d28ac089499ff2c09d60aa68a878f5a82880635069687e SHA512 cf690a7aa623ea3ba0f01a104d16faa1ba250df689e125a843f53cdc3cd92ba240196c5b63c783f196ea8ecae64a2c5de8dc9215199057677ebe390f8b45ad36 WHIRLPOOL d07929b787276f6b3a07ed7f3b4c72d71147ef2905f0419f260a85e9ec89bcd5022bd118238d9bc8019e0db48f168f9077c14d3ab86a641385e7326c6c712780
-MISC ChangeLog 16562 SHA256 81c68ef58b13c98b7926847bb1d6c9ff74c0d220a5694e4468386887dca64189 SHA512 c548820f00610088abdfe9c1721cda082cc1b85b040e62432e2b5a92f4d700fca029261aef1d12109a77bfcdf3e276cadf81b50791d169770a11848e7ff53020 WHIRLPOOL e3918a1822739e5840bc9e6101178c5f2ea58442555cd10690236b23b2c3923104c0eb79394dfe6ff4404d611f858f476e26fca59203e304e3bb0c077f2db557
+MISC ChangeLog 16694 SHA256 5bb233011fb89732aaaca21107bb8a8dd710fff3c7f8deeaf2b7d9c67b24d0dc SHA512 c42f3578e39b29d90b96f4a652386134908462d13eda1ae5fd0fbe33a6fcaaaebe6df26ca3c45e6b8effae6411927a1c5a14df5663570c7e7e3f3daba496c784 WHIRLPOOL 794eb9ff6dbfeba4fc4f33375beb15e82375c1ae28d37fe723cefb137ad6b7251df2474187601947be6c956f38eb0e3366ced9e057d129827d6686d960ee7784
 MISC metadata.xml 722 SHA256 70795a507d431d9f6682777a65b480eeb0d762368f3150552b7d17bf98f96bed SHA512 1a6cb74025b5f750c82f7c373638a764f19057bbb076e96688f73690362ef197d8a38333873f8ec5baaa9cdf11a0848c83c1d86403f17b70347d7f6ca8fcbe3f WHIRLPOOL 5a3b8cbfbdbada615803ac5e6cf3a21ebc6f5d15ee1d440be6de3efcd129557c6651aac91192b8b94ed7171e856cc564e9f49c7c5b6d425d2b778621f644c7ef
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.20 (GNU/Linux)
 
-iQIcBAEBCgAGBQJRzfmUAAoJELp701BxlEWfIJAP/1i86Rhy5R9ihw2Efk/GDVH/
-1HQcJKuArkiNCogVUdmHSObQgQFndcDNc4V4LNZPyukZAPiITdEh6l5EpP1DQnXq
-IpHKpd9LB5SsZWOK/Qp/yFzhzDo2BWLbGS293OI3i8ScC0XMz4JM+Jh3Rjm1EJmb
-b53uEPSCOTZPewci9U7UReqBqWZD0Rjb9MOAs+bHf0tG/N578wf4A1jt279sf1F0
-ltuzMWNWhA40l00CQ5u5G0T8mTx5LdhUC60+D4N8040dnmNWR21AfksgVn5SlzyM
-rJpnQ6ScxZ6RBEYMtYo+ivcaHC/rZvD2JjRnGBryLVQpA6JzBdb9fDyYj0YBwptM
-vf+4KcH+J+/Gm0BviCB2dIDjWaw5Tbcr0WphhpVXdVPu9VdqKMtl8SrTp+DaO9T6
-2ymJag9DlvC7U4MWiBvop1fQR9OB/MM9KnjgklMv1MXgCHC6O+u+HfGhG3E1tRSb
-K/NUZkZSHBmff6r6gj6u7j6XHB8C30Te17FXzQK/YbDjUES2qXAQdqe2BdlysmBH
-RBQXvwod7xdFhfPXNxGkN8/Un+DiDZQfnGfGD2QXXYTdNvr8UV/b6yi4T8soDZkJ
-t7BgKKVcR9CKdBS9PlGh/ahHFTL10gpsA6wmm2G4lcY9P23G9sF2hLnWhGcXUNmm
-gDHQNc2R6mkHOqXcQt6K
-=gslR
+iQF8BAEBCABmBQJR0ui6XxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXRDMDRGNEJFMDZEQTJGRUY3NkI4MEM3NTlE
+N0RGQThEMzE4RkE5QUVGAAoJENffqNMY+prvsyYH/3D8n3U/A82MXfJEjrak+lU2
+93F67SNivmL+/d1v5QiACnFh4GFuaMpEG1jqZAAJ2t0oD7vFYbMP2xYh2Y9tQXe9
+KkgIhKokyTTdhrt7dxRkglZ6VmT5ErUMfqWlX/hYi5kZVZVJiG7hSlE8bBVnQe8N
+z6G2YrSGY2FAN0rH5P/60hcc5kHi04PCZZjC9J1JKmgPwxWwpRMMm0zgxLf2sRV4
+z/e8LnfxC5fOIFZFg9ldD9UkezXD1Fh00Sd/sEPL++v4CNs6AKOkx7wcYYefPDcO
+gFwVEVoIKpj+BDVqkD3jkIbkzjFRoGB879UF57L/LbeSc5/SL4HFX81j1B0ATu4=
+=RKNA
 -----END PGP SIGNATURE-----
